<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:padding="50dp"
        android:src="@drawable/login_logo" />

    <RelativeLayout
        android:id="@+id/user_linear"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/module_login_ul_user_layout_height"
        android:layout_below="@+id/login_logo"
        android:background="@color/white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/userID_linear"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/module_login_ul_layout_height"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/module_login_ml"
            android:layout_marginRight="@dimen/module_login_mr"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_account"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/module_login_account"
                android:textColor="@color/black"
                android:textSize="@dimen/large_eidtText_text_size" />


            <EditText
                android:id="@+id/username_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/username_account"
                android:background="@null"
                android:hint="@string/module_login_user_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/userland_pass"
                android:paddingLeft="@dimen/fourth_margin"
                android:paddingRight="@dimen/module_login_input_pr"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/large_eidtText_text_size" />

            <Button
                android:id="@+id/username_txt_clear"
                android:layout_width="@dimen/module_login_clear_btn"
                android:layout_height="@dimen/module_login_clear_btn"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/double_padding"
                android:background="@drawable/login_edit_text_clear"
                android:gravity="right"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            style="@style/DividerHorizontal"
            android:layout_below="@id/userID_linear"
            android:layout_marginLeft="@dimen/module_login_ml"
            android:layout_marginRight="@dimen/module_login_ml" />

        <RelativeLayout
            android:id="@+id/userPassword"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/module_login_ul_layout_height"
            android:layout_below="@id/userID_linear"
            android:layout_marginLeft="@dimen/module_login_ml"
            android:layout_marginRight="@dimen/module_login_mr"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/module_login_password"
                android:textColor="@color/black"
                android:textSize="@dimen/large_eidtText_text_size" />


            <EditText
                android:id="@+id/password_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/password"
                android:background="@null"
                android:hint="@string/module_login_password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="@dimen/fourth_margin"
                android:paddingRight="@dimen/module_login_input_pr"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/large_eidtText_text_size" />

            <Button
                android:id="@+id/password_txt_clear"
                android:layout_width="@dimen/module_login_clear_btn"
                android:layout_height="@dimen/module_login_clear_btn"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/double_padding"
                android:background="@drawable/login_edit_text_clear"
                android:gravity="right"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        style="@style/DividerHorizontal"
        android:layout_below="@id/user_linear"
        android:layout_marginLeft="@dimen/module_login_ml"
        android:layout_marginRight="@dimen/module_login_ml" />

    <Button
        android:id="@+id/userland_button_land"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/module_login_ul_button_land_height"
        android:layout_below="@id/user_linear"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/fifth_margin"
        android:background="@drawable/common_main_btn_selector"
        android:enabled="false"
        android:text="@string/module_login_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userland_button_land"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="注册"
        android:textColor="@color/input_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userland_button_land"
        android:layout_gravity="right"
        android:layout_toRightOf="@id/register"
        android:gravity="right"
        android:padding="16dp"
        android:text="@string/module_login_forget_password"
        android:textColor="@color/input_text_color"
        android:textSize="14sp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/login_bg"
        android:scaleType="fitXY"/>

</RelativeLayout>