<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99232323">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/update_dialog_bg"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <!-- Title -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">


            <TextView
                android:id="@+id/update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_updatetitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#008bea"/>

        </RelativeLayout>

        <!-- split -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#008bea"/>
        <!-- Content -->

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/update_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:textColor="#000"/>
            </LinearLayout>
        </ScrollView>


        <!-- OK&Cancel Button -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/update_id_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/update_button_ok_bg_selector"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/update_updatenow"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/update_id_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/update_button_cancel_bg_selector"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/update_notnow"
                android:textColor="#000"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>